* Reworked the combat item system. Report if there's any weirdness when using items.
* Added some more fates to Asche
* Expanded on Asche's inventory
* Added Aquilius to outlaws camp (find him in the infirmary). Written by The Observer.
* Jo Rhade has made a re-appearance with a new win scene or two for the equines. Player needs a cock.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4c2
-------------
* Fixed a bug in the combat code that'd cause the fight against Layla to break.
* Fixed a bug in the code that'd break Out of Combat abilities. First Aid/Heal should work again.
* Some additional Asche fortunes

Version 0.4c
------------
* Yet more typo fixes
* Twopenny's armor shop added to Rigard shop street (The Observer)
* Asche's magic shop added to Rigard shop street (The Observer)
* Continuation on the combat rewrite:
 - Fixed some typos and borked stuff
 - Cooldowns on Bash/Grand slam reduced
 - The rest of the physical skills replaced
 - EnemySkills replaced: Scorpion, Orchid, Gol, Corishev
 - All seduction skills replaced
 - All black magic replaced
 - Most healing spells replaced
* Cveta's Lull ability replaced with Dischord, a physical defense debuff that becomes more potent the higher the lust of the target.
* Kyna is locked to debug mode. I'll leave her where she is for now, but she's likely going to be removed at some point in the future.
* The outlaws intro tweaked slightly (Zenith)
* Added a short, alternate hypnotist scene to the desert naga that doesn't require you to have lost to her. You need to have mastered hypnotist.
* Race structure rewritten. Might introduce some wierdness, so keep on the lookout.

Version 0.4b
------------
* Alchemy menu is sorted alphabetically
* Added a weak health potion. Can be bought from Patchwork
* A metric fuckton of typos and minor bugs fixed (thanks CalmKhaos!)