@@ -14,6 +14,9 @@ Version 0.4d
 * Expanded on Asche's inventory
 * Added Aquilius to outlaws camp (find him in the infirmary). Written by The Observer.
 * Jo Rhade has made a re-appearance with a new win scene or two for the equines. Player needs a cock.
+* Themed rooms are added to the Shadow Lady. You need to buy a regular whore first (currently only Roa available)
+ - Cat Dynasty, chapter one, written by LD and QB
+ - More to come...
 
 --------------------------------------------
              PREVIOUS VERSIONS
